--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
               growth.
             </p>
             <p>
-              Whether it's through predictive analysis or visual storytelling, I
+              Whether it's through predictive analysis or visual storytelling, We
               excel at delivering solutions that empower organizations to stay
-              ahead in a data-centric world. My expertise spans a range of tools
+              ahead in a data-centric world. Our expertise spans a range of tools
               that ensure precision and clarity in every project.
             </p>
             <div class="skills">
@@ -65,7 +65,7 @@
                 <li><strong>Programming:</strong> Python, R, SQL</li>
                 <li><strong>Tools:</strong> Power BI, Tableau, Excel</li>
                 <li>
-                  <strong>Skills:</strong> Data Cleaning, Analysis,
+                  <strong>Skills:</strong> Data modeling, Analysis,
                   Visualization
                 </li>
                 <li>
@@ -210,7 +210,7 @@
     <section class="services" id="services">
       <div class="container">
         <h2>My Expertise</h2>
-        <p>Here are the key areas where I can help your business thrive:</p>
+        <p>Here are the key areas where we can help your business thrive:</p>
         <div class="service-cards">
           <div class="service-card">
             <img
@@ -255,7 +255,7 @@
         </p>
         <div class="social-links">
           <a
-            href="https://linkedin.com/in/ijeoma-ike"
+            href="www.linkedin.com/in/ijeoma-ike-9b083989"
             target="_blank"
             aria-label="LinkedIn"
           >
@@ -268,13 +268,7 @@
           >
             <img src="img/github.png" alt="GitHub" />
           </a>
-          <a
-            href="https://twitter.com/ijeoma-ike"
-            target="_blank"
-            aria-label="Twitter"
-          >
-            <img src="img/twitter.png" alt="Twitter" />
-          </a>
+          
         </div>
         <p class="copyright">© 2025 Data Normads. All rights reserved.</p>
       </div>
