--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
           <button type="submit" class="btn primary">Send Message</button>
         </form>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/ijeoma-ike" target="_blank"
+          <a href="https://www.linkedin.com/in/ijeoma-j-ike" target="_blank"
             >LinkedIn</a
           >
           <a href="https://github.com/ijeomaDiamonds" target="_blank">GitHub</a>
-          <a href="mailto:ijeoma.j.ike.com">Email Me</a>
+          <a href="mailto:ijeoma.j.ike@gmail.com">Email Me</a>
         </div>
       </div>
     </section>
@@ -255,7 +255,7 @@
         </p>
         <div class="social-links">
           <a
-            href="www.linkedin.com/in/ijeoma-ike-9b083989"
+            href="www.linkedin.com/in/ijeoma-j-ike"
             target="_blank"
             aria-label="LinkedIn"
           >
