--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <button type="submit" class="btn primary">Send Message</button>
         </form>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/ijeoma-j-ike" target="_blank"
+          <a href="https://www.linkedin.com/in/ijeoma-ike-9b083989" target="_blank"
             >LinkedIn</a
           >
           <a href="https://github.com/ijeomaDiamonds" target="_blank">GitHub</a>
@@ -255,7 +255,7 @@
         </p>
         <div class="social-links">
           <a
-            href="www.linkedin.com/in/ijeoma-j-ike"
+            href="www.linkedin.com/in/ijeoma-ike-9b083989"
             target="_blank"
             aria-label="LinkedIn"
           >
